--- a/style/css/menus.css
+++ b/style/css/menus.css
@@ -24,29 +24,27 @@ h3 {
 h4 {
   font-size: 17px;
   font-family: "Roboto";
-  padding: 5px 0 0 10px;
-  max-width: 200px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis; }
+  padding: 5px 0 0 10px; }
 
 p {
   font-size: 15px;
   font-family: "Roboto";
-  padding-left: 10px;
+  padding-left: 10px; }
+
+.text {
   max-width: 200px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis; }
 
 @media screen and (min-width: 1100px) and (max-width: 1200px) {
-  h4 {
+  .text {
     max-width: 200px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis; } }
 @media screen and (min-width: 1400px) {
-  p {
+  .text {
     text-overflow: none;
     overflow: visible;
     white-space: none; } }
