--- a/style/scss/title-menu.scss
+++ b/style/scss/title-menu.scss
@@ -32,25 +32,23 @@ h4{
     font-size: 17px;
     font-family: $font-family-text;
     padding: 5px 0 0 10px;
-    max-width: 200px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
 }
 
 p{
     font-size: 15px;
     font-family: $font-family-text;
     padding-left: 10px;
+}
+
+.text{
     max-width: 200px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
-
 @media screen and (min-width: 1100px) and (max-width: 1200px) {
-    h4{
+    .text{
     max-width: 200px;
     white-space: nowrap;
     overflow: hidden;
@@ -60,7 +58,7 @@ p{
 }
 
 @media screen and (min-width: 1400px){
-    p{
+    .text{
         text-overflow: none;
         overflow: visible;
         white-space: none;
