--- a/style/scss/title-menu.scss
+++ b/style/scss/title-menu.scss
@@ -32,6 +32,9 @@ h4{
     font-size: 17px;
     font-family: $font-family-text;
     padding: 5px 0 0 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 p{
