--- a/style/scss/menus.scss
+++ b/style/scss/menus.scss
@@ -147,7 +147,7 @@ a{
 }
 
 .menu-item{
-  //  animation-name: glissement; 
+    animation-name: glissement; 
     -webkit-animation-duration: 2s;
 }
 
