--- a/style/css/menus.css
+++ b/style/css/menus.css
@@ -58,7 +58,7 @@ button {
 button:hover {
   background: #9f70d7;
   background: linear-gradient(360deg, #9f70d7 0%, #ff9ce4 100%);
-  box-shadow: 4px 4px 10px #dfdfdf; }
+  box-shadow: 4px 4px 10px #353535; }
 
 /* Footer */
 footer {
@@ -200,6 +200,7 @@ a {
     /*width: 100%;*/ }
 
 .menu-item {
+  animation-name: glissement;
   -webkit-animation-duration: 2s; }
 
 @-webkit-keyframes glissement {
