--- a/style/css/menus.css
+++ b/style/css/menus.css
@@ -197,7 +197,7 @@ a {
     padding-left: 8px;
     padding-bottom: 7px;
     padding-right: 10px;
-    /*width: 100%;*/ }
+    font-family: 'Roboto'; }
 
 .menu-item {
   animation-name: glissement;
