--- a/style/scss/menus.scss
+++ b/style/scss/menus.scss
@@ -142,7 +142,7 @@ a{
         padding-left: 8px;
         padding-bottom: 7px;
         padding-right: 10px;
-        /*width: 100%;*/
+        font-family: 'Roboto';
     }
 }
 
