--- a/style/css/accueil.css
+++ b/style/css/accueil.css
@@ -44,7 +44,7 @@ button {
 button:hover {
   background: #9f70d7;
   background: linear-gradient(360deg, #9f70d7 0%, #ff9ce4 100%);
-  box-shadow: 4px 4px 10px #dfdfdf; }
+  box-shadow: 4px 4px 10px #353535; }
 
 /* Footer */
 footer {
