--- a/style/css/menus.css
+++ b/style/css/menus.css
@@ -53,9 +53,26 @@ button {
   box-shadow: 4px 4px 10px #dfdfdf;
   height: 50px;
   color: #FFF;
-  font-size: 18px; }
+  font-size: 18px;
+  width: 250px; }
 
 button:hover {
+  background: #9f70d7;
+  background: linear-gradient(360deg, #9f70d7 0%, #ff9ce4 100%);
+  box-shadow: 4px 4px 10px #353535; }
+
+.taille2 {
+  background: #9356dc;
+  background-image: linear-gradient(0deg, rgba(147, 86, 220, 0.9), rgba(255, 121, 218, 0.9));
+  border: none;
+  border-radius: 30px;
+  box-shadow: 4px 4px 10px #dfdfdf;
+  height: 50px;
+  color: #FFF;
+  font-size: 18px;
+  width: 150px; }
+
+.taille2:hover {
   background: #9f70d7;
   background: linear-gradient(360deg, #9f70d7 0%, #ff9ce4 100%);
   box-shadow: 4px 4px 10px #353535; }
