--- a/style/scss/button.scss
+++ b/style/scss/button.scss
@@ -15,3 +15,21 @@ button:hover{
     background: linear-gradient(360deg, rgba(159,112,215,1) 0%, rgba(255,156,228,1) 100%);
     box-shadow: 4px 4px 10px #353535;
 }
+
+.taille2{
+    background: rgb(147, 86, 220);
+    background-image: linear-gradient(0deg,rgba(147,86,220,.9),rgba(255,121,218,.9));
+    border: none;
+    border-radius: 30px;
+    box-shadow: 4px 4px 10px rgb(223, 223, 223);
+    height: 50px;
+    color: #FFF;
+    font-size: 18px;
+    width: 150px; 
+}
+
+.taille2:hover{
+    background: rgb(159,112,215);
+    background: linear-gradient(360deg, rgba(159,112,215,1) 0%, rgba(255,156,228,1) 100%);
+    box-shadow: 4px 4px 10px #353535;
+}
