--- a/style/css/accueil.css
+++ b/style/css/accueil.css
@@ -284,7 +284,8 @@ a {
   font-size: x-large;
   position: absolute;
   color: gray;
-  right: 30px; }
+  right: 30px;
+  bottom: 35px; }
 
 .checkbox {
   display: none; }
