--- a/style/css/accueil.css
+++ b/style/css/accueil.css
@@ -275,6 +275,8 @@ a {
     display: flex;
     align-items: center;
     padding: 16px; }
+  .restaurants .description-text {
+    padding-right: 150px; }
 
 /* Animation coeur */
 .margin-bottom {
