--- a/style/scss/accueil.scss
+++ b/style/scss/accueil.scss
@@ -270,6 +270,10 @@ a{
         align-items: center;
         padding: 16px;
     }
+
+    .description-text{
+        padding-right: 150px;
+    }
 }
 
 /* Animation coeur */
