--- a/style/scss/accueil.scss
+++ b/style/scss/accueil.scss
@@ -269,6 +269,7 @@ a{
         display: flex;
         align-items: center;
         padding: 16px;
+        cursor: pointer;
     }
 
     .description-text{
