--- a/style/scss/accueil.scss
+++ b/style/scss/accueil.scss
@@ -268,14 +268,14 @@ a{
     .description-menu{
         display: flex;
         align-items: center;
-        padding: 16px;
-        cursor: pointer;
-    }
-
-    .description-text{
-        padding-right: 150px;
     }
 }
+
+.width100{
+    width: 100%;
+    padding: 16px;
+}
+
 
 /* Animation coeur */
 .margin-bottom{
