--- a/style/css/menus.css
+++ b/style/css/menus.css
@@ -19,7 +19,8 @@ h3 {
   font-size: 19px;
   padding-bottom: 4px;
   font-weight: 300;
-  font-family: "Roboto"; }
+  font-family: "Roboto";
+  padding-top: 5px; }
 
 h4 {
   font-size: 17px;
